# heart-attack-detection

./: LICENSE  data.dvc  pyproject.toml
.dvc/: config
