[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Tanmay Kacker", email = "tanmaykacker40@gmail.com"},
]
dependencies = [
    "tensorflow-macos>=2.8.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
